@@ -2,6 +2,7 @@ Change log next version
 -----------------------
 * It's now possible to configure the HTTP Multipart mode when send multi-parts. Configure this in the REST Assured HttpClientConfig (issue 223).
 * Non-backward compatible change: Default multi-part mode for multi-part uploads is changed from Browser Compatibility mode to Strict mode.
+* Fixed so that getting a single detailed cookie from the Response really works.
 
 Change log 1.8.0 (2013-04-01)
 -----------------------------
